made login bar logo stop going off screen

--- a/src/styles/partials/Login_bar.scss
+++ b/src/styles/partials/Login_bar.scss
@@ -14,5 +14,5 @@
     height: 40px;
     margin: auto;
     padding-top: 0.5rem;
-    padding-left: 8.5rem;
+    padding-left: 6rem;
 }
